# xc-firmware

./: .gitignore  .gitmodules  CITATION.cff  LICENSE  Makefile  README.md  flash.sh  flashdb.txt  project.ldf  project.sty  promote.xml  reportview.xml  tools  xc-firmware.ldf  xc-firmware.sty
boards/: Makefile  ac1.v  ac256.v  ac32.v  ac8.v  chain.svf  chain.xcf  erase.svf  flash_bypass.xcf  flash_erase.xcf  flash_fast_program.xcf  flash_program.xcf  flash_test.xcf  flash_unlock.xcf  flash_var.xcf  flash_verify.xcf  lcmxo3.lpf  lcmxo3l.lpf  lcmxo3l.v  pc03.lpf  pc03.v  program.xcf  setup_port.svf  synplify.tcl.footer  synplify.tcl.header  template.v  unlock.svf  xc-firmware_eraseall.xcf  xc-firmware_program.xcf  xc-firmware_verify.xcf  xc12.v  xc128.v  xc14.v  xc16.v  xc18.v  xc20.v  xc22.v  xc24.v  xc256.v  xc30.v  (+5 more)
bsdl/: fpga-md-02042-1-13-lfe5u-25f-tqfp144.bsm
correlator/: clock_divider.v  correlator.qsf  correlator.v  counter.v  dff.v  main.v  osc.v  pwm.v  tx_word.v  uart_rx.v  uart_tx.v
cyclone2/: pll.v
layouts/pc03/: PC03.kicad_pcb  PC03.pro  PC03.sch  pc03.xls
layouts/xc32/: XC32.kicad_pcb  XC32.sch
layouts/xc8/: XC8.kicad_pcb  XC8.sch
lfe5u/: pll.v
pc03/: PC03.kicad_pcb  PC03.pro  PC03.sch
source/: adc.v  autocorrelator.v  clock_divider.v  cmd_parser.v  correlator.v  counter.v  crosscorrelator.v  dff.v  indicators.v  main.v  pwm.v  sine.v  spi_slave.v  tx_word.v  uart.v  uart_rx.v  uart_tx.v
tools/: README.md  runme.sh  tools-lattice
tools/data/: .setting.ini  DEVICES  alg_data.svft  alg_verify.svft  area.sty  base.stf  base_ec.bdk  base_ec.stf  base_jedec.stf  base_sc_scm.stf  baseflow.bdk  baseflowcmd.bdk  basenewdev.bdk  basepojo.bdk  basepropset.stf  basereport.bdk  basereveal.bdk  basetool.bdk  baseui.stf  colordefaults.ccd  copyright.txt  device.acd  enginemsg.xml  ep5a00.bdk  ep5a00.stf  ep5a00s.bdk  ep5c00.bdk  ep5c00.stf  ep5g00.bdk  ep5g00.stf  ep5g00p.bdk  ep5m00.bdk  ep5m00.stf  ep5m00s.bdk  generic_lattice.sym  installation_history.txt  io.sty  ipexpress_list.ini  ispsys.ini  lattice.bdk  (+55 more)
tools/data/claritydesigner/: sample.nlv
tools/data/debugger/: qsteglobal.properties  stp.properties  svf.properties  svf_user.xml
tools/data/fileutility/: pfu.properties  qsteglobal.properties
tools/data/flow_script/: gui_synplify.tcl  ini_read.tcl  migrate_strategy.tcl  path.tcl  pojo_encryption.tcl  read_syn_prj.tcl  reveal_rvp.tcl  syn_lattice.tcl  syn_precision.tcl  syn_synplify.tcl  tohdl.tcl
tools/data/msgdata/: helpid.xml
tools/data/pnlayout/: enter_preferences.ini  manage_project.ini  (+1 more)
tools/source/: CMakeLists.txt  prog.c
tools/synpbase/: licinfo.txt
xc256/: xc-firmware_xc256.xcf
xc32/: xc-firmware_xc32.xcf
xc4/: xc-firmware_xc4_program.xcf
xc64/: xc-firmware_xc64.xcf  xc-firmware_xc64_verify.xcf
xc8/: xc-firmware_xc8.xcf  xc-firmware_xc8_eraseall.xcf
(+3585 files in other folders)
